<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/tabSkill"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--首部下拉框(技能)-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@color/colorTransparentWhite">
                <Spinner
                    android:id="@+id/spinnerSkill"
                    android:layout_weight="3"
                    android:layout_width="100dp"
                    android:layout_height="match_parent">
                </Spinner>
                <EditText
                    android:id="@+id/txtSearchSkill"
                    android:layout_weight="1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColorHint="@color/colorGray"
                    android:hint="@string/txtSearchSkill_hint"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:background="@drawable/edittext_shape"
                    android:importantForAutofill="no" tools:targetApi="o"/>

                <ImageButton
                    android:id="@+id/btnSearchSkill"
                    android:contentDescription="@string/app_name"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/search"
                    android:background="#00000000"
                    android:onClick="on_btnSearchSkill_clicked"/>

            </LinearLayout>

            <!--威力/命中-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorTransparentWhite">
                <!--分隔线-->
                <TextView android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/colorBlack"/>
                <!--标签提示(威力/命中)-->
                <TextView
                    android:id="@+id/lblPowerAndRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblPowerAndRate_text"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">
                    <!--威力-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/power"/>
                        <EditText
                            android:id="@+id/txtPower"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColorHint="@color/colorTextHint"
                            android:hint="@string/power"
                            android:inputType="number"
                            android:textSize="15sp"
                            android:layout_marginTop="1dp"
                            android:layout_marginStart="1dp"
                            android:layout_marginEnd="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/edittext_shape"
                            android:importantForAutofill="no" tools:targetApi="o"/>
                    </LinearLayout>
                    <!--命中-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rate"/>
                        <EditText
                            android:id="@+id/txtRate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColorHint="@color/colorTextHint"
                            android:hint="@string/rate"
                            android:inputType="number"
                            android:textSize="15sp"
                            android:layout_marginTop="1dp"
                            android:layout_marginStart="1dp"
                            android:layout_marginEnd="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/edittext_shape"
                            android:importantForAutofill="no" tools:targetApi="o"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!--技能属性-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorTransparentWhite">
                <!--分隔线-->
                <TextView android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/colorBlack"/>
                <!--标签提示(技能属性)-->
                <TextView
                    android:id="@+id/lblSkillType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblSkillType_text"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/spinnerSkillType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:entries="@array/type">
                    </Spinner>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

            <!--技能类型-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorTransparentWhite">
                <!--分隔线-->
                <TextView android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/colorBlack"/>
                <!--标签提示(技能类型)-->
                <TextView
                    android:id="@+id/lblSkillStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblSkillStyle_text"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Spinner
                        android:id="@+id/spinnerSkillStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:entries="@array/skillStyle">
                    </Spinner>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

            <!--PP/优先度-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorTransparentWhite">
                <!--分隔线-->
                <TextView android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/colorBlack"/>
                <!--标签提示(威力/命中)-->
                <TextView
                    android:id="@+id/lblPPAndPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblPPAndPriority_text"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">
                    <!--PP-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/PP"/>
                        <EditText
                            android:id="@+id/txtPP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColorHint="@color/colorTextHint"
                            android:hint="@string/PP"
                            android:inputType="number"
                            android:textSize="15sp"
                            android:layout_marginTop="1dp"
                            android:layout_marginStart="1dp"
                            android:layout_marginEnd="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/edittext_shape"
                            android:importantForAutofill="no" tools:targetApi="o"/>
                    </LinearLayout>
                    <!--优先度-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/priority"/>
                        <EditText
                            android:id="@+id/txtPriority"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColorHint="@color/colorTextHint"
                            android:hint="@string/priority"
                            android:inputType="number"
                            android:textSize="15sp"
                            android:layout_marginTop="1dp"
                            android:layout_marginStart="1dp"
                            android:layout_marginEnd="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/edittext_shape"
                            android:importantForAutofill="no" tools:targetApi="o"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <TextView android:layout_width="match_parent" android:layout_height="1dp" android:background="#FF0000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnWriteSkill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnWriteSkill_text"
            android:onClick="on_btnWriteSkill_clicked"/>
        <Button
            android:id="@+id/btnRefreshSkill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRefreshSkill_text"
            android:onClick="on_btnRefreshSkill_clicked"/>
    </LinearLayout>

</LinearLayout>