<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/tabAbout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorBlack">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                android:src="@mipmap/ic_my_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:text="@string/app_name"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:text="@string/version"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:text="@string/copyright"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorBlack">
        </View>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head"
        app:layout_constraintBottom_toTopOf="@id/foot"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="注:本软件代码完全由个人开发"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="声明"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="按照约定，在10月1日发布免费版！\n修改器适用：究极绿宝石4.4版及究极绿宝石4.4以下版本"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="此软件适合觉得自己喜欢的宝可梦不够厉害，想要比较强硬的增强自己喜欢的宝可梦的玩家。"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="修改不是目的所在，游戏的乐趣还是要亲自体验。滥用修改游戏将毫无乐趣，望大家自省自觉！"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="开发者"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="叹一曲悲凉 QQ:1953649096"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="哔哩哔哩昵称    丶寂痕"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="欢迎相同爱好者共同讨论"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="使用软件"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="Android Studio（代码编写与调试）"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="Notepad++（阅读代码）"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="IconLover（图标绘制）"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="开源代码"/>
            <Button
                android:id="@+id/benOpenSource"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="获取"
                android:onClick="on_btnOpenSource_clicked"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="打赏"/>

            <ImageView
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/tip_wechat"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="up主只是一个普通的学生，谢谢"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/tip_alipay" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorBlack">
            </View>

            <Button
                android:id="@+id/btnCheckUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="检查更新"
                android:onClick="on_btnCheckUpdate_clicked"/>
            <Button
                android:id="@+id/btnActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="激活"
                android:onClick="on_btnActive_clicked"/>

            <Button
                android:id="@+id/btnGetMegaVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="获取永久mega版本"
                android:onClick="on_btnGetMegaVersion_clicked"/>
            <Button
                android:id="@+id/btnHowToUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="使用教程"
                android:onClick="on_btnHowToUse_clicked"/>

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>